# slabs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/commands/: arch-review.md  qa.md
.github/: settings.yml
.github/workflows/: ci.yml
benches/: chunking.rs
examples/: 01_basic_chunking.rs  README.md  chunking_strategies.rs  code_chunking.rs  late_chunking.rs  offset_validation.rs  span_pooling.rs
src/: capacity.rs  code.rs  error.rs  fixed.rs  late.rs  lib.rs  model.rs  recursive.rs  semantic.rs  sentence.rs  sizer.rs  slab.rs
tests/: code_props.rs  coverage_tests.rs  integration_innr.rs  late_pooling.rs  offset_references.rs  property_tests.rs  sizer_imports.rs
