[package]
name = "slabs"
version = "0.1.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Text chunking for RAG: fixed, sentence, recursive, and semantic strategies"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/slabs"
keywords = ["chunking", "rag", "nlp", "text", "segmentation"]
categories = ["text-processing"]

[dependencies]
# Core
thiserror = "2.0"
unicode-segmentation = "1.11"
clap = { version = "4.5", features = ["derive"], optional = true }

# Semantic chunking (optional)
fastembed = { version = "5.8.1", optional = true }

# SIMD primitives for semantic similarity (ecosystem crate)
innr = { version = "0.1.0", optional = true }
symproj = { version = "0.1.0", optional = true }
textprep = { version = "0.1.0", optional = true }

# Code chunking (optional)
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }

[features]
default = []
cli = ["dep:clap"]
semantic = ["dep:fastembed", "dep:innr", "dep:symproj", "dep:textprep"]
code = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
]

[dev-dependencies]
proptest = "1.9"
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "chunking"
harness = false
