[package]
name = "slabs"
version = "0.3.0"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
description = "Retrieval spans and late pooling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/slabs"
keywords = ["chunking", "rag", "embedding", "retrieval", "spans"]
categories = ["text-processing"]
rust-version = "1.81"

[workspace]

[dependencies]
thiserror = "2.0"

# Serialization (optional)
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
proptest = "1.9"
text-splitter = "0.32"
